--- a/README.adoc
+++ b/README.adoc
@@ -22,7 +22,7 @@ To deploy the final Argo CD module, you'll need to add the following declaration
 [source,terraform]
 ----
 module "argocd" {
-  source = "git::https://github.com/camptocamp/modern-gitops-stack-module-argocd.git?ref=<RELEASE>"
+  source = "git::https://github.com/GersonRS/modern-gitops-stack-module-argocd.git?ref=<RELEASE>"
 
   cluster_name   = local.cluster_name
   base_domain    = local.base_domain
@@ -48,7 +48,7 @@ A more complex declaration, that includes a OIDC configuration for the login (th
 [source,terraform]
 ----
 module "argocd" {
-  source = "git::https://github.com/camptocamp/modern-gitops-stack-module-argocd.git?ref=<RELEASE>"
+  source = "git::https://github.com/GersonRS/modern-gitops-stack-module-argocd.git?ref=<RELEASE>"
 
   ...
 
@@ -87,7 +87,7 @@ You can also overload the `policy.csv` as shown in the following example:
 [source,terraform]
 ----
 module "argocd" {
-  source = "git::https://github.com/camptocamp/modern-gitops-stack-module-argocd.git?ref=<RELEASE>"
+  source = "git::https://github.com/GersonRS/modern-gitops-stack-module-argocd.git?ref=<RELEASE>"
 
   ...
 
@@ -113,7 +113,7 @@ NOTE: By default, this module has a `policy.csv` that is configured to give admi
 This module installs two custom plugins:
 
 1. "kustomized-helm" is just a combination of Kustomize and Helm that allows using Helm charts and then applying Kustomize overrides to the result.
-2. "helmfile-sops" adds support for Helmfile managed applications, and integrates the support for https://github.com/mozilla/sops[SOPS]. This is a custom plugin developed by Camptocamp (source code available https://github.com/camptocamp/docker-argocd-cmp-helmfile[here]).
+2. "helmfile-sops" adds support for Helmfile managed applications, and integrates the support for https://github.com/mozilla/sops[SOPS]. This is a custom plugin developed by GersonRS (source code available https://github.com/GersonRS/docker-argocd-cmp-helmfile[here]).
 
 NOTE: When using SOPS, you will want to give it access to an external secrets management or encryption service. For this, you will want to pass an AWS IAM role, and Azure Workload Identity Client-ID, or an Azure AAD Pod Identity using the variables `repo_server_iam_role_arn`, repo_server_azure_workload_identity_clientid`, or `repo_server_aadpodidbinding`.
 
@@ -241,7 +241,7 @@ The following resources are used by this module:
 
 - https://registry.terraform.io/providers/oboukili/argocd/latest/docs/resources/application[argocd_application.this] (resource)
 - https://registry.terraform.io/providers/oboukili/argocd/latest/docs/resources/project[argocd_project.this] (resource)
-- https://registry.terraform.io/providers/camptocamp/jwt/latest/docs/resources/hashed_token[jwt_hashed_token.tokens] (resource)
+- https://registry.terraform.io/providers/GersonRS/jwt/latest/docs/resources/hashed_token[jwt_hashed_token.tokens] (resource)
 - https://registry.terraform.io/providers/hashicorp/null/latest/docs/resources/resource[null_resource.dependencies] (resource)
 - https://registry.terraform.io/providers/hashicorp/null/latest/docs/resources/resource[null_resource.this] (resource)
 - https://registry.terraform.io/providers/hashicorp/random/latest/docs/resources/uuid[random_uuid.jti] (resource)
@@ -685,7 +685,7 @@ Description: Map of extra accounts that were created and their tokens.
 |Name |Type
 |https://registry.terraform.io/providers/oboukili/argocd/latest/docs/resources/application[argocd_application.this] |resource
 |https://registry.terraform.io/providers/oboukili/argocd/latest/docs/resources/project[argocd_project.this] |resource
-|https://registry.terraform.io/providers/camptocamp/jwt/latest/docs/resources/hashed_token[jwt_hashed_token.tokens] |resource
+|https://registry.terraform.io/providers/GersonRS/jwt/latest/docs/resources/hashed_token[jwt_hashed_token.tokens] |resource
 |https://registry.terraform.io/providers/hashicorp/null/latest/docs/resources/resource[null_resource.dependencies] |resource
 |https://registry.terraform.io/providers/hashicorp/null/latest/docs/resources/resource[null_resource.this] |resource
 |https://registry.terraform.io/providers/hashicorp/random/latest/docs/resources/uuid[random_uuid.jti] |resource
