--- a/bootstrap/README.adoc
+++ b/bootstrap/README.adoc
@@ -1,6 +1,6 @@
 = Argo CD Bootstrap Module
 
-This module is used to bootstrap the Argo CD that will deploy the rest of the Modern GitOps Stack modules on a first deployment of a cluster.
+This module is used to bootstrap the Argo CD that will deploy the rest of the DevOps Stack modules on a first deployment of a cluster.
 
 The Argo CD installed is the same as the one deployed by the Argo CD module, however *this module deploys it using the Helm provider for Terraform*, since the Argo CD provider cannot be obviously used until it installed.
 
@@ -11,7 +11,7 @@ To do that, on your Terraform configuration you can declare the module as such:
 [source,terraform]
 ----
 module "argocd_bootstrap" {
-  source = "git::https://github.com/GersonRS/modern-gitops-stack-module-argocd.git//bootstrap?ref=<RELEASE>"
+  source = "git::https://github.com/camptocamp/devops-stack-module-argocd.git//bootstrap?ref=<RELEASE>"
 
   # Note here that you should mark the module as depending on the module that deployed the cluster
   depends_on = [module.eks]
@@ -36,7 +36,7 @@ provider "argocd" {
 
 === Unified AppProject
 
-By default, all the modules of the Modern GitOps Stack create their own AppProject to deploy the Argo CD Application deployed by the module. *Since the version 3.5.0* of this module, the bootstrap module now supports creating AppProjects for a given map of projects passed in the variable `argocd_projects`. The Modern GitOps Stack modules then can be configured to use this unified AppProject instead of creating on for each application.
+By default, all the modules of the DevOps Stack create their own AppProject to deploy the Argo CD Application deployed by the module. *Since the version 3.5.0* of this module, the bootstrap module now supports creating AppProjects for a given map of projects passed in the variable `argocd_projects`. The DevOps Stack modules then can be configured to use this unified AppProject instead of creating on for each application.
 
 TIP: By default, the AppProjects created by this module do not contain restrictions for the destination namespace or source repositories, but you can change that behavior by configuring the `allowed_source_repos` and `allowed_namespaces` values on the `argocd_projects` map.
 
@@ -97,7 +97,7 @@ The following providers are used by this module:
 
 The following resources are used by this module:
 
-- https://registry.terraform.io/providers/oboukili/argocd/latest/docs/resources/project[argocd_project.modern_gitops_stack_applications] (resource)
+- https://registry.terraform.io/providers/argoproj-labs/argocd/latest/docs/resources/project[argocd_project.devops_stack_applications] (resource)
 - https://registry.terraform.io/providers/hashicorp/helm/latest/docs/resources/release[helm_release.argocd] (resource)
 - https://registry.terraform.io/providers/camptocamp/jwt/latest/docs/resources/hashed_token[jwt_hashed_token.argocd] (resource)
 - https://registry.terraform.io/providers/hashicorp/null/latest/docs/resources/resource[null_resource.this] (resource)
@@ -201,9 +201,9 @@ Description: The Argo CD accounts pipeline tokens.
 [cols="a,a",options="header,autowidth"]
 |===
 |Name |Version
+|[[provider_random]] <<provider_random,random>> |>= 3
 |[[provider_jwt]] <<provider_jwt,jwt>> |>= 1.1
 |[[provider_time]] <<provider_time,time>> |>= 0.9
-|[[provider_random]] <<provider_random,random>> |>= 3
 |[[provider_helm]] <<provider_helm,helm>> |>= 2
 |[[provider_argocd]] <<provider_argocd,argocd>> |>= 6
 |[[provider_utils]] <<provider_utils,utils>> |>= 1.6
@@ -215,7 +215,7 @@ Description: The Argo CD accounts pipeline tokens.
 [cols="a,a",options="header,autowidth"]
 |===
 |Name |Type
-|https://registry.terraform.io/providers/oboukili/argocd/latest/docs/resources/project[argocd_project.modern_gitops_stack_applications] |resource
+|https://registry.terraform.io/providers/argoproj-labs/argocd/latest/docs/resources/project[argocd_project.devops_stack_applications] |resource
 |https://registry.terraform.io/providers/hashicorp/helm/latest/docs/resources/release[helm_release.argocd] |resource
 |https://registry.terraform.io/providers/camptocamp/jwt/latest/docs/resources/hashed_token[jwt_hashed_token.argocd] |resource
 |https://registry.terraform.io/providers/hashicorp/null/latest/docs/resources/resource[null_resource.this] |resource
