feat(bootstrap): improve repositories variable and fix logic
- Fix repositories variable validation with proper condition and error message
- Correct for_each logic in argocd_repository resource to work with list(string)
- Improve repository naming logic to generate cleaner names
- Add configured_repositories output for tracking
- Update README with usage examples including repositories configuration
- Add copilot instructions for AI agents

Changes:
- bootstrap/variables.tf: Enhanced repositories variable with proper validation
- bootstrap/main.tf: Fixed for_each logic and repository naming
- bootstrap/outputs.tf: Added configured_repositories output
- bootstrap/README.adoc: Updated with repositories usage example
- .github/copilot-instructions.md: Added comprehensive AI agent guidelines

--- a/bootstrap/README.adoc
+++ b/bootstrap/README.adoc
@@ -15,6 +15,20 @@ module "argocd_bootstrap" {
 
   # Note here that you should mark the module as depending on the module that deployed the cluster
   depends_on = [module.eks]
+  
+  # Optional: Configure repositories to be added to Argo CD
+  ssh_private_key = var.ssh_private_key
+  repositories = [
+    "git@github.com:example/infrastructure.git",
+    "git@github.com:example/applications.git"
+  ]
+  
+  # Optional: Configure AppProjects
+  argocd_projects = {
+    "default" = {
+      destination_cluster = "in-cluster"
+    }
+  }
 }
 ----
 
